--- a/sea-orm-macros/Cargo.toml
+++ b/sea-orm-macros/Cargo.toml
@@ -33,6 +33,7 @@ serde = { version = "1.0", features = ["derive"] }
 [features]
 default = ["derive"]
 postgres-array = []
+postgres-range = []
 derive = ["bae"]
 strum = []
 seaography = ["proc-macro-crate"]
