--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,9 +34,8 @@ tracing = { version = "0.1", default-features = false, features = ["attributes",
 rust_decimal = { version = "1", default-features = false, optional = true }
 bigdecimal = { version = "0.4", default-features = false, optional = true }
 sea-orm-macros = { version = "~1.1.8", path = "sea-orm-macros", default-features = false, features = ["strum"] }
-# version = "0.32.1"
 sea-query = { version = "0.32.1", default-features = false, features = ["thread-safe", "hashable-value", "backend-mysql", "backend-postgres", "backend-sqlite"] }
-sea-query-binder = { path = "../sea-query/sea-query-binder", default-features = false, optional = true }
+sea-query-binder = { version = "0.7.0", default-features = false, optional = true }
 strum = { version = "0.26", default-features = false }
 serde = { version = "1.0", default-features = false }
 serde_json = { version = "1.0", default-features = false, optional = true }
@@ -118,3 +117,4 @@ seaography = ["sea-orm-macros/seaography"]
 # This allows us to develop using a local version of sea-query
 [patch.crates-io]
 sea-query = { path = "../sea-query" }
+sea-query-binder = { path = "../sea-query/sea-query-binder" }
