--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,8 +34,10 @@ tracing = { version = "0.1", default-features = false, features = ["attributes",
 rust_decimal = { version = "1", default-features = false, optional = true }
 bigdecimal = { version = "0.4", default-features = false, optional = true }
 sea-orm-macros = { version = "~1.1.8", path = "sea-orm-macros", default-features = false, features = ["strum"] }
-sea-query = { version = "0.32.1", default-features = false, features = ["thread-safe", "hashable-value", "backend-mysql", "backend-postgres", "backend-sqlite"] }
-sea-query-binder = { version = "0.7.0", default-features = false, optional = true }
+# sea-query = { version = "0.32.1", default-features = false, features = ["thread-safe", "hashable-value", "backend-mysql", "backend-postgres", "backend-sqlite"] }
+# sea-query-binder = { version = "0.7.0", default-features = false, optional = true }
+sea-query = { path = "../sea-query", default-features = false, features = ["thread-safe", "hashable-value", "backend-mysql", "backend-postgres", "backend-sqlite"] }
+sea-query-binder = { path = "../sea-query/sea-query-binder", default-features = false, optional = true }
 strum = { version = "0.26", default-features = false }
 serde = { version = "1.0", default-features = false }
 serde_json = { version = "1.0", default-features = false, optional = true }
@@ -74,6 +76,12 @@ default = [
     "with-bigdecimal",
     "with-uuid",
     "with-time",
+    "postgres-range",
+    "sqlx-postgres",
+    # "sqlx-all",
+    # "sqlx-sqlite",
+    "proxy",
+    "runtime-tokio-rustls",
 ]
 macros = ["sea-orm-macros/derive"]
 mock = []
@@ -87,7 +95,7 @@ with-time = ["time", "sea-query/with-time", "sea-query-binder?/with-time", "sqlx
 with-ipnetwork = ["ipnetwork", "sea-query/with-ipnetwork", "sea-query-binder?/with-ipnetwork", "sqlx?/ipnetwork"]
 postgres-array = ["sea-query/postgres-array", "sea-query-binder?/postgres-array", "sea-orm-macros/postgres-array"]
 postgres-vector = ["pgvector", "sea-query/postgres-vector", "sea-query-binder?/postgres-vector"]
-postgres-range = ["pgrange","sea-query/postgres-range", "sea-query-binder?/postgres-range"]
+postgres-range = ["pgrange", "sea-query/postgres-range", "sea-query-binder?/postgres-range", "sea-orm-macros/postgres-range"]
 json-array = ["postgres-array"] # this does not actually enable sqlx-postgres, but only a few traits to support array in sea-query
 sea-orm-internal = []
 sqlx-dep = []
