--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,7 +95,7 @@ with-time = ["time", "sea-query/with-time", "sea-query-binder?/with-time", "sqlx
 with-ipnetwork = ["ipnetwork", "sea-query/with-ipnetwork", "sea-query-binder?/with-ipnetwork", "sqlx?/ipnetwork"]
 postgres-array = ["sea-query/postgres-array", "sea-query-binder?/postgres-array", "sea-orm-macros/postgres-array"]
 postgres-vector = ["pgvector", "sea-query/postgres-vector", "sea-query-binder?/postgres-vector"]
-postgres-range = ["pgrange", "sea-query/postgres-range", "sea-query-binder?/postgres-range", "sea-orm-macros/postgres-range"]
+postgres-range = ["pgrange","sea-query/postgres-range", "sea-query-binder?/postgres-range"]
 json-array = ["postgres-array"] # this does not actually enable sqlx-postgres, but only a few traits to support array in sea-query
 sea-orm-internal = []
 sqlx-dep = []
